# sandbox-mcp

./: .coverage  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  COVERAGE_GAP_ANALYSIS.md  MCP_CONFIGURATION.md  README.md  install.sh  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security_vulnerability.md
docs/: changelog.md  marketplace-profile.json  marketplace.md  phase-5-tzar-review.md  quality-remediation-track-tzar-review.md  tzar-of-excellence-final-review.md
maestro/: .claude-hud.md  product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md  workflow.md
maestro/tracks/quality-remediation_20260306/: metadata.json  plan.md
scripts/: check_docs_consistency.py
src/sandbox/: __init__.py  mcp_sandbox_server.py  mcp_sandbox_server_stdio.py
src/sandbox/core/: __init__.py  artifact_backup_service.py  artifact_services.py  code_validator.py  execution_context.py  execution_context_artifacts.py  execution_context_db.py  execution_context_files.py  execution_context_monitor.py  execution_context_state.py  execution_services.py  patching.py  path_validation.py  security.py  session_execution_manager.py
src/sandbox/sdk/: __init__.py  local_sandbox.py  node_sandbox.py  remote_sandbox.py
src/sandbox/server/: __init__.py  artifact_helpers.py  artifact_service.py  catalog.py  execution_helpers.py  ffmpeg_helpers.py  help_text.py  info_helpers.py  manim_helpers.py  package_helpers.py  repl_helpers.py  session_service.py  shell_helpers.py  tool_registry.py  web_export_docker.py  web_export_service.py  web_helpers.py
src/sandbox/utils/: lazy_imports.py
tests/core/: test_code_validator.py  test_code_validator_coverage.py  test_execution_context_artifacts.py  test_execution_context_unique.py  test_interactive_repl_coverage.py  test_patching.py  test_session_execution_manager.py
tests/integration/: test_e2e_execution.py  test_session_isolation_tdd.py
tests/sdk/: test_local_sandbox_simple.py  test_sdk_coverage.py
tests/security/: README.md  test_coverage_t3_artifact_helpers.py  test_coverage_t3_execution_helpers.py  test_coverage_t3_execution_services.py  test_coverage_t3_session_service.py  test_path_validation.py  test_security_blockers.py  test_session_service_safety.py
tests/server/: test_helper_coverage.py  test_transport_parity.py
tests/unit/: test_artifact_services.py  test_execution_context_hmac.py  test_execution_context_transactions.py  test_execution_services.py  test_lazy_imports.py  test_repl_helpers.py  test_sdk_independence.py  test_server_artifact_service.py  test_session_service.py  test_stdio_server_refactored.py  test_tool_registry.py
