[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sandbox"
version = "0.1.0"
description = "Python code execution sandbox with FastMCP server integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "fastmcp>=2.10.5",
    "ffmpeg-python==0.2.0",
    "ipython>=9.4.0",
    "manim==0.19.0",
    "numpy>=1.26.4",
    "matplotlib>=3.8.4",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "scikit-learn==1.5.2",
    "seaborn==0.12.0",
]

[project.scripts]
sandbox-server = "sandbox.mcp_sandbox_server:main"
sandbox-server-stdio = "sandbox.mcp_sandbox_server_stdio:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sandbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
